--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+*.log
+*_check.txt
 
 # env files (can opt-in for committing if needed)
 .env*
