--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "framer-motion": "^12.34.0",
-    "next": "15.1.6",
+    "framer-motion": "^11.18.2",
+    "next": "^16.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
@@ -20,7 +20,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.16",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8.4.32",
     "tailwindcss": "3.4.0",
     "typescript": "^5"
